# oidc-provider-mock

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yaml  publish.yaml
docs/: api.rst  conf.py  http.rst  index.md  index.rst  usage.md
examples/: flask_oidc_example.py
src/: oidc.py
src/oidc_provider_mock/: __init__.py  __main__.py  _app.py  _client.py  _client_lib.py  _internal.py  _server.py  _storage.py
src/oidc_provider_mock/templates/: authorization_form.html  index.html
tests/: auth_form_test.py  auth_test.py  cli_test.py  conftest.py  flask_advanced_test.py  main_test.py  misc_test.py  oidc_client.py  oidc_test.py  pyoidc_test.py  refresh_token_test.py  self_client_test.py  test_key_rotation.py  test_oidc_client.py
